<resources>

    <string name="app_name">Balls of Frenzy</string>
    <string name="version_name" translatable="false">v1.1.5</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-5224340966987491~2160481963</string>
    <string name="admob_settings" translatable="false">ca-app-pub-5224340966987491/3637215161</string>

    <string name="sku_donate" translatable="false">default_donate</string>

    <string name="button_finish">Close</string>
    <string name="button_select_file">Select file</string>
    <string name="button_select_resource">Select image</string>
    <string name="donate">Donate</string>
    <string name="donation">Help for developers</string>
    <string name="error_file_not_image">Can\'t get image from selected file</string>
    <string name="background_not_selected">Background wasn\'t select</string>
    <string name="in_process_google_setup">Google setup in progress. Please wait</string>
    <string name="in_process_google">There is another operation in progress. Please try again later</string>
    <string name="loading">Loading</string>
    <string name="mark_dialog_message">Please help to make application awesome and rate it in Google Play.</string>
    <string name="mark_dialog_title">Rate the app</string>
    <string name="mark_dialog_button_mark">Rate now</string>
    <string name="mark_dialog_button_mark_later">May be later</string>
    <string name="mark_dialog_button_mark_never">Never</string>
    <string name="preference_ball_size">Ball size</string>
    <string name="preference_ball_pop_on_click">Burst ball on click</string>
    <string name="preference_ball_explode_on_pop">Explode ball on pop</string>
    <string name="preference_ball_rotate">Rotate ball on move</string>
    <string name="preference_ball_show_trail">Show ball path</string>
    <string name="preference_ball_speed">Ball speed</string>
    <string name="preference_balls_color_random">Random choice</string>
    <string name="preference_balls_color_default">Fixed color</string>
    <string name="preference_show_ads_banner">Show banner advertising</string>
    <string name="preference_text_balls_bakcground">Balls background</string>
    <string name="preference_text_balls_color">Ball colors</string>
    <string name="thanks_for_help">Thanks for your help</string>
    <string name="wallpaper_description">Wallpaper with balls</string>
    <string name="wallpaper_set">Set wallpaper</string>
    <string name="wallpaper_set_2_lines">Set\nwallpaper</string>

</resources>
