<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mark_dialog_message"
        android:gravity="start"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/markButton"
            style="@style/GreatButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/mark_dialog_button_mark"/>

        <Button
            android:id="@+id/markLaterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/mark_dialog_button_mark_later"/>

        <Button
            android:id="@+id/markNeverButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/mark_dialog_button_mark_never"/>

    </LinearLayout>

</LinearLayout>