<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/showAdsBannerBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/preference_show_ads_banner"/>

    <Button
        android:id="@+id/donateButton"
        style="@style/GreatButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/donate"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Black"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_finish"/>

</LinearLayout>